# server.js
@@ -12,7 +12,7 @@ const swaggerDefinition = yaml.load('./swagger.yaml');
 app.use('/api/docs', swaggerUi.serve, swaggerUi.setup(swaggerDefinition));
 
 //import routes
-const productRoutes = require("./routes/product");
+const projectRoutes = require("./routes/project");
 const authRoutes = require("./routes/auth");
 
 require ("dotenv-flow").config();
@@ -38,7 +38,7 @@ mongoose.connect(
 mongoose.connection.once("open", () => console.log("Connected successfully to MongoDB"));
 
 //post, put, delete -> CRUD
-app.use("/api/products", productRoutes);
+app.use("/api/projects", projectRoutes);
 app.use("/api/user", authRoutes);
 
 const PORT = process.env.PORT || 4000;
